# microservice-test-bench

./: .coverage  .gitignore  Dockerfile.filebeat  README.md  clear_data.bat  docker-compose.yml  filebeat.yml  presentation.md  pyproject.toml  workspace.toml
archive/original_base/: LICENSE  presentation.md  workspace.toml
bases/back_python/data_api/: __init__.py
bases/back_python/django/: __init__.py
bases/backend/dj_example/: README.md  __init__.py
bases/backend/fapi_example/: README.md  __init__.py  core.py
bases/front_vuejs/vujs/: __init__.py
bases/python/django/: README.md  __init__.py
components/back_python/observability/: __init__.py
components/backend/dummy_component/: README.md  __init__.py
components/backend/observability/: core.py
components/managment/tools/: README.md  __init__.py  core.py
docs/: requirements.md  test_stategy.md
lde/: README.md  env.yaml  k3d-default.yaml  k3d_cluster_config.yml  keycloak.yaml  manage.py  manage_k3d_cluster.py  manage_ollama.py  mongo-deployment.yaml  ollama.yaml  postgres-deployment.yaml  redis-deployment.yaml  traefik.yaml
projects/analytics_service/: Dockerfile
projects/analytics_service/app/: Dockerfile  health_server.py  kafka_consumer.py  main.py  mongo_client.py  requirements.txt  schemas.py
projects/api/: pyproject.toml
projects/aspiredashboard/: pyproject.toml
projects/aspiredashboard/kubernetes/local/: main.yaml  manage.py
projects/discount_by_age_service/app/: Dockerfile
projects/discount_service/: Dockerfile
projects/discount_service/app/: main.py  (+5 more)
projects/dj_example/: pyproject.toml
projects/django/: pyproject.toml
projects/eck/: README.md  pyproject.toml
projects/fapi_example/: Dockerfile  README.md  pyproject.toml
projects/fapi_example/kubernetes/local/: main.yaml
projects/jupyter/: pyproject.toml
projects/keycloak/: pyproject.toml
projects/mongodb/: pyproject.toml
projects/nodejs/: pyproject.toml
projects/ollama/: Dockerfile  README.md  pyproject.toml
projects/opentelemetry/: README.md  pyproject.toml
projects/postgresql/: pyproject.toml
projects/redis/: pyproject.toml  redis_utils.py
projects/score_service/: alembic.ini  dockerfile
projects/user_service/: Dockerfile  alembic.ini
projects/vujs/: pyproject.toml
services/discount_by_age_service/: main.py
services/user_service/: main.py
shared/: kafka_client.py  logger_config.py  redis_client.py
tests/: requirements.txt
tests/analytics_service/: test_plan_analytics_service.md
tests/discount_service/: test_plan_discount_service.md
tests/postman/: Smoke_path.postman_collection.json  data_user_service.csv  validation_user_service_postman_collection.json
tests/score_service/: test_plan_score_service.md
tests/user_service/: test_plan_user_service.md
(+119 files in other folders)
