[tool.poetry]
name = "datapipelineexperiments"
version = "0.1.0"
description = ""
authors = ["Sergii Pogorielov"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    {include = "back_python/data_api",from = "bases"},
    {include = "back_python/observability",from = "components"},
]

[tool.poetry.dependencies]
python = "^3.13"
kombu = "^5.4.2"
fastapi = "^0.115.6"
faststream = "^0.5.33"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
