[tool.poetry]
name = "lde-monorepo"
version = "0.1.0"
description = ""
authors = ["Sergii Pogorielov"]
license = "MIT"
readme = "README.md"
package-mode = false
packages = [
    {include = "backend/fapi_example",from = "bases"},
    {include = "backend/dj_example",from = "bases"},
    {include = "backend/dummy_component", from = "components"}
]

[tool.poetry.dependencies]
python = "^3.13"
kombu = "^5.4.2"
fastapi = {extras = ["standard"], version = "^0.115.7"}
faststream = "^0.5.33"
django = "^5.1.5"
django-allauth = "^65.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
