[tool.poetry]
name = "aspiredashboard"
version = "0.1.0"
description = "aspiredashboard for local development"
authors = ["Sergii Pogorielov"]
license = ""

packages = []

[tool.poetry.dependencies]
python = "^3.13"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
